Composite build setup

--- a/build.gradle
+++ b/build.gradle
@@ -76,3 +76,9 @@ publishing {
         }
     }
 }
+
+task cleanAll {
+    dependsOn gradle.includedBuilds*.task(':clean')
+    dependsOn clean
+}
+
