--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,3 @@
-rootProject.name = 'c4w-cytoscape'
-
+rootProject.name = 'cytoscape-txa-analysis'
 includeBuild '../c4w-multidll'
 includeBuild '../c4w-txa'
